Updating Mapperes and unit testing